Fix spacing on sections

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,9 +1,5 @@
-#about {
-  padding-top: 2em;
-}
-
 #about div {
-  margin: 1em 2em;
+  margin: 2em;
   padding: 1em;
   border-radius: 1.5em;
   flex: 0 1 50%;
@@ -21,9 +17,12 @@
 }
 
 @media (orientation: portrait) or (max-width: 1080px) {
-  #about #about-1,
+  #about #about-1 {
+    margin: 2em 2em 0;
+    text-align: center;
+  }
   #about #about-2 {
-    margin: 0 2em;
+    margin: 0 2em 2em;
     text-align: center;
   }
 }
